p2/confs/app1.yaml
apiVersion: apps/v1
kind : Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.10
        env:
        - name: MESSAGE
          value: "Hello from app-one"
        ports:
        - containerPort: 8080
---

apiVersion : v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
