p2/confs/app2.yaml
apiVersion: apps/v1
kind : Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: paulbouwer/hello-kubernetes:1.10
        env:
        - name: MESSAGE
          value: "Hello from app-two"
        ports:
        - containerPort: 8080
---

apiVersion : v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
