p2/confs/app3.yaml
apiVersion: apps/v1
kind : Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: paulbouwer/hello-kubernetes:1.10
        env:
        - name: MESSAGE
          value: "Hello from app-three"
        ports:
        - containerPort: 8080
---

apiVersion : v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # paulbouwer/hello-kubernetes:1.10 exposes port 8080
  type: ClusterIP
